test/parser/programs/invalid/while1.guav
while is True {
   ret True
}
